@@ -1,3 +1,11 @@
+Sat Nov 24 10:45:50 GMT 2007  Colin Watson  <cjwatson@debian.org>
+
+	* src/man.c (make_roff_command): If the environment variable
+	  MANROFFOPT is set, append its contents to the *roff command line
+	  (thanks, Ivan Shmakov; Debian bug #451187).
+	* man/man1/man.man1 (ENVIRONMENT): Document MANROFFOPT.
+	* docs/NEWS: Document this.
+
 Mon Nov 19 19:41:18 GMT 2007  Colin Watson  <cjwatson@debian.org>
 
 	* configure.ac (AM_INIT_AUTOMAKE): Require Automake 1.10. Ming Hua
